--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -93,6 +93,12 @@
               <span class="label-input100">Email</span>
             </div>
 
+            <div class="wrap-input100 validate-input">
+              <input class="input100" type="text" name="avatar" />
+              <span class="focus-input100"></span>
+              <span class="label-input100">Link avatar</span>
+            </div>
+
             <div
               class="wrap-input100 validate-input"
               data-validate="Password must to required and min length is at least 6 characters!"
