--- a/src/views/chat.ejs
+++ b/src/views/chat.ejs
@@ -1,1 +1,111 @@
-<h1>chat</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Message</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.css"
+    />
+    <link rel="stylesheet" href="/css/chat.css" />
+  </head>
+  <body>
+    <div class="main-section">
+      <div class="head-section">
+        <div class="headLeft-section">
+          <div class="headLeft-sub">
+            <img
+              src="<%=user.avatar %>"
+              alt="avatar"
+              width="40px"
+              height="40px"
+            />
+            <h4><%=user.name %></h4>
+            <a href="/logout" style="color: red; text-decoration: none"
+              >Logout</a
+            >
+          </div>
+        </div>
+        <div class="headRight-section">
+          <div class="headRight-sub">
+            <h3>Lajy Ion</h3>
+            <small>Lorem ipsum dolor sit amet...</small>
+          </div>
+        </div>
+      </div>
+      <div class="body-section">
+        <div
+          class="left-section mCustomScrollbar"
+          data-mcs-theme="minimal-dark"
+        >
+          <ul>
+            <% restUsers.forEach(function(item, index){ %>
+            <li <% if (item._id.toString() == friend._id.toString()) {%> class="active" <% } %>>
+              <a class="chatList" href="/?friend=<%=item._id %>">
+                <div class="img">
+                  <i class="fa fa-circle"></i>
+                  <img src="<%=item.avatar %>" />
+                </div>
+                <div class="desc">
+                  <small class="time">05:30 am</small>
+                  <h5><%=item.name %></h5>
+                  <small><%=item._id %>...</small>                 
+                </div>
+              </a>
+            </li>
+            <% }); %>
+
+            
+          </ul>
+        </div>
+        <div class="right-section">
+          <div class="message mCustomScrollbar" data-mcs-theme="minimal-dark">
+            <ul>
+              <li class="msg-left">
+                <div class="msg-left-sub">
+                  <img src="<%=friend.avatar %>" />
+                  <div class="msg-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </div>
+                  <small>05:25 am</small>
+                </div>
+              </li>
+              <li class="msg-right">
+                <div class="msg-left-sub">
+                  <img src="<%=user.avatar %>" />
+                  <div class="msg-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </div>
+                  <small>05:25 am</small>
+                </div>
+              </li>
+              
+            </ul>
+          </div>
+          <div class="right-section-bottom">
+            <form>
+              <input type="text" name="message" placeholder="Type here..." />
+              <button class="btn-send"><i class="fa fa-send"></i></button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- custom scrollbar plugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+  </body>
+</html>
