--- a/src/views/chat.ejs
+++ b/src/views/chat.ejs
@@ -37,8 +37,8 @@
         </div>
         <div class="headRight-section">
           <div class="headRight-sub">
-            <h3>Lajy Ion</h3>
-            <small>Lorem ipsum dolor sit amet...</small>
+            <h3><%=friend.name %></h3>
+            <small><%=friend.email %></small>
           </div>
         </div>
       </div>
@@ -62,44 +62,44 @@
                 </div>
               </a>
             </li>
-            <% }); %>
-
-            
+            <% }); %>            
           </ul>
         </div>
         <div class="right-section">
           <div class="message mCustomScrollbar" data-mcs-theme="minimal-dark">
-            <ul>
-              <li class="msg-left">
-                <div class="msg-left-sub">
-                  <img src="<%=friend.avatar %>" />
-                  <div class="msg-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </div>
-                  <small>05:25 am</small>
-                </div>
-              </li>
-              <li class="msg-right">
-                <div class="msg-left-sub">
-                  <img src="<%=user.avatar %>" />
-                  <div class="msg-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </div>
-                  <small>05:25 am</small>
-                </div>
-              </li>
-              
+            <ul class="list-messages">
+              <% messages.forEach(function(item, index){ %>
+                <% if (item.sender.toString() === user.id.toString()) { %>
+                  <li class="msg-right">
+                    <div class="msg-left-sub">
+                      <img src="<%=user.avatar %>" />
+                      <div class="msg-desc">
+                         <%=item.content %>                        
+                      </div>
+                      <small>05:25 am</small>
+                    </div>
+                  </li>
+                <% } else { %>
+                  <li class="msg-left">
+                    <div class="msg-left-sub">
+                      <img src="<%=friend.avatar %>" />
+                      <div class="msg-desc">
+                         <%=item.content %>
+                      </div>
+                      <small>05:25 am</small>
+                    </div>
+                  </li>  
+                <% } %>                 
+              <% }); %>                  
             </ul>
           </div>
           <div class="right-section-bottom">
             <form>
-              <input type="text" name="message" placeholder="Type here..." />
-              <button class="btn-send"><i class="fa fa-send"></i></button>
+              <input type="text" class="message" name="message" placeholder="Type here..." />
+              <button class="btn-send" type="submit"><i class="fa fa-send"></i></button>
             </form>
+            <div class="data-user" hidden data-id="<%=user.id %>" data-avatar="<%=user.avatar %>"></div>
+            <div class="data-friend" hidden data-id="<%=friend.id %>" data-avatar="<%=friend.avatar %>"></div>
           </div>
         </div>
       </div>
@@ -107,5 +107,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- custom scrollbar plugin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="/js/socket.io.js"></script>
+    <script src="/js/socket.js"></script>
   </body>
 </html>
